--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
       <!-- end loader -->
       <div id="mySidepanel" class="sidepanel">
          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-         <a href="index.html">Home</a>
-         <a href="about.html">About</a>
-         <a href="services.html">Services</a>
-         <a href="contact.html">Contact</a>
+         <a href="index.html">Inicio</a>
+         <a href="about.html">Acerca</a>
+         <a href="services.html">Productos</a>
+         <a href="contact.html">Contacto</a>
       </div>
       <!-- header -->
       <header>
@@ -51,9 +51,9 @@
                   </div>
                   <div class="col-sm-9">
                      <ul class="email text_align_right">
-                        <li class="d_none"> <i class="fa fa-map-marker" aria-hidden="true"></i>Location</a></li>
-                        <li class="d_none"><i class="fa fa-phone" aria-hidden="true"></i>+71  1234567890</a></li>
-                        <li class="d_none"> <a href="#"><i class="fa fa-envelope" aria-hidden="true"></i>demo@gmail.com</a></li>
+                        <li class="d_none"> <i class="fa fa-map-marker" aria-hidden="true"></i>Managua</a></li>
+                        <li class="d_none"><i class="fa fa-phone" aria-hidden="true"></i>+505 8460 7915</a></li>
+                        <li class="d_none"> <a href="#"><i class="fa fa-envelope" aria-hidden="true"></i>solucioneselectronicasmg@gmail.com</a></li>
                         <li class="d_none"> <a href="#">Login <i class="fa fa-user" aria-hidden="true"></i></a> </li>
                         <li class="d_none"><i class="fa fa-search" style="cursor: pointer;" aria-hidden="true"></i></li>
                         <li> <button class="openbtn" onclick="openNav()"><img src="images/menu_btn.png"></button></li>
@@ -77,10 +77,10 @@
                   <div class="container">
                      <div class="carousel-caption relative">
                         <div class="bg_white">
-                           <h1>Welcome To our <span class="yello">Interior Design</span></h1>
-                           <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as</p>
+                           <h1>Soluciones Electrónicas <span class="yello">MG</span></h1>
+                           <p>Somos una empresa Nicaragüense, que contamos con la experiencia profesional para satisfacer sus necesidades</p>
                         </div>
-                        <a class="read_more ban_btn" href="Javascript:void(0)">Read More</a>
+                        <a class="read_more ban_btn" href="Javascript:void(0)">Más Información</a>
                      </div>
                   </div>
                </div>
@@ -88,10 +88,10 @@
                   <div class="container">
                      <div class="carousel-caption relative">
                         <div class="bg_white">
-                           <h1>Welcome To our <span class="yello">Interior Design</span></h1>
-                           <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as</p>
+                           <h1>Tu seguridad y la de los tuyos <span class="yello">NO TIENE PRECIO</span></h1>
+                           <p>En Soluciones Electronicas MG tenemos el sistema de seguridad para su residencia o negocio</p>
                         </div>
-                        <a class="read_more ban_btn" href="Javascript:void(0)">Read More</a>
+                        <a class="read_more ban_btn" href="Javascript:void(0)">Más Información</a>
                      </div>
                   </div>
                </div>
@@ -99,21 +99,21 @@
                   <div class="container">
                      <div class="carousel-caption relative">
                         <div class="bg_white">
-                           <h1>Welcome To our <span class="yello">Interior Design</span></h1>
-                           <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as</p>
+                           <h1>Amplia variedad de productos de <span class="yello">Seguridad Interior y Exterior</span></h1>
+                           <p>Cotiza ya nuestros sistemas de Cámaras de seguridad Turbo AHD 720p 1080p 4MP 4K 5K FULL Colors y mucho más para proteger tu Oficina, Negocio, Residencia, Finca y mucho más</p>
                         </div>
-                        <a class="read_more ban_btn" href="Javascript:void(0)">Read More</a>
+                        <a class="read_more ban_btn" href="Javascript:void(0)">Más información</a>
                      </div>
                   </div>
                </div>
             </div>
             <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
+            <span class="sr-only">Anterior</span>
             </a>
             <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
+            <span class="sr-only">Siguiente</span>
             </a>
          </div>
       </div>
@@ -124,8 +124,8 @@
             <div class="row">
                <div class="col-sm-12">
                   <div class="titlepage">
-                     <h2>About us</h2>
-                     <p>It is a long established fact that a reader will be distracted by the readable content </p>
+                     <h2>Sobre Nosotros</h2>
+                     <p>Somos una empresa Nicaragüense, que contamos con la experiencia profesional para satisfacer sus necesidades</p>
                   </div>
                </div>
                <div class=" col-sm-12">
@@ -133,14 +133,13 @@
                      <div class="row d_flex">
                         <div class="col-md-5">
                            <div class="about_box_text">
-                              <h3>Best INTERIOR Design</h3>
-                              <p>There are many variations of passages of 
-                                 Lorem Ipsum available, but the majority 
-                                 have suffered alteration in some 
-                                 form, by injected humour,There are many 
-                                 variations of passages of 
+                              <h3>Las mejores promociones y precios</h3>
+                              <p>Excelentes promociones en nuestros sistemas de 
+							  Cámaras de vigilancia, cercas eléctricas, 
+							  alarmas de intrusion, alarmas contra incendio, 
+							  GPS, Redes y mucho más...
                               </p>
-                              <a class="read_more" href="Javascript:void(0)">Read More</a>
+                              <a class="read_more" href="Javascript:void(0)">Más Información</a>
                            </div>
                         </div>
                         <div class=" col-md-7  pppp">
