--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 </head>
 
 <body>
-    <!-- Spinner Start -->
+
+
+ <!-- Spinner Start -->
     <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
         <div class="spinner-border position-relative text-primary" style="width: 6rem; height: 6rem;" role="status"></div>
         <i class="fa fa-laptop-code fa-2x text-primary position-absolute top-50 start-50 translate-middle"></i>
@@ -379,46 +381,65 @@
     </div>
     <!-- Feature End -->
 
-
     <!-- Project Start -->
-    <div class="container-xxl py-5">
+
+	<div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                 <h6 class="section-title bg-white text-center text-primary px-3">Nuestros Productos</h6>
                 <h1 class="display-6 mb-4">Algunos de nuestros productos insignia</h1>
+				
             </div>
-            <div class="owl-carousel project-carousel wow fadeInUp" data-wow-delay="0.1s">
-                <div class="project-item border rounded h-100 p-4" data-dot="01">
-                    <div class="position-relative mb-4">
-                        <img class="img-fluid rounded" src="img/project-1.jpg" alt="">
-                        <a href="img/project-1.jpg" data-lightbox="project"><i class="fa fa-eye fa-2x"></i></a>
+			
+			
+
+<!-- <div class="todo"> -->
+<!-- <div class="body2"> -->
+<!-- <div id="modal_container" class="modal-container"> -->
+  <!-- <div class="modal"> -->
+    <!-- <h1>Ventana Modal</h1> -->
+    <!-- <p> -->
+      <!-- Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque assumenda dignissimos illo explicabo natus quia repellat, praesentium voluptatibus harum ipsam dolorem cumque labore sunt dicta consectetur, nesciunt maiores delectus maxime? -->
+    <!-- </p> -->
+    <!-- <button id="close">Cerrar</button> -->
+  <!-- </div> -->
+<!-- </div> -->
+<!-- </div> -->
+			
+			
+            <div  class="owl-carousel project-carousel wow fadeInUp" data-wow-delay="0.1s">
+                <div class="project-item border rounded h-100 p-4 " data-dot="01">
+                    <div  class="position-relative mb-4 ">
+                        <img  class="img-fluid rounded" src="img/project-1.jpg" alt="">
+                        <a id="open" href="img/project-1.jpg" data-lightbox="project"><i  class="fa fa-eye fa-2x"></i></a>
                     </div>
-                    <h6>UI / UX Design</h6>
-                    <span>Digital agency website design and development</span>
+                    <h6>DS-2CD2123G2-IU</h6>
+                    <span>4K Acusense Fixed Dome Network Camera</span>
                 </div>
+						
                 <div class="project-item border rounded h-100 p-4" data-dot="02">
                     <div class="position-relative mb-4">
                         <img class="img-fluid rounded" src="img/project-2.jpg" alt="">
                         <a href="img/project-2.jpg" data-lightbox="project"><i class="fa fa-eye fa-2x"></i></a>
                     </div>
-                    <h6>UI / UX Design</h6>
-                    <span>Digital agency website design and development</span>
+                    <h6>DS-2CD2H23G2-IZS</h6>
+                    <span>2 MP AcuSense Motorized Varifocal Turret Network Camera</span>
                 </div>
                 <div class="project-item border rounded h-100 p-4" data-dot="03">
                     <div class="position-relative mb-4">
                         <img class="img-fluid rounded" src="img/project-3.jpg" alt="">
-                        <a href="img/project-2.jpg" data-lightbox="project"><i class="fa fa-eye fa-2x"></i></a>
+                        <a href="img/project-3.jpg" data-lightbox="project"><i class="fa fa-eye fa-2x"></i></a>
                     </div>
-                    <h6>UI / UX Design</h6>
-                    <span>Digital agency website design and development</span>
+                    <h6>KIT VOZ IP 40W</h6>
+                    <span>Panel de alarma VOZ IP 40W</span>
                 </div>
                 <div class="project-item border rounded h-100 p-4" data-dot="04">
                     <div class="position-relative mb-4">
                         <img class="img-fluid rounded" src="img/project-4.jpg" alt="">
                         <a href="img/project-4.jpg" data-lightbox="project"><i class="fa fa-eye fa-2x"></i></a>
                     </div>
-                    <h6>UI / UX Design</h6>
-                    <span>Digital agency website design and development</span>
+                    <h6>TORNIQUETE CON BRAZO</h6>
+                    <span>Torniquete Bidireccional con Brazo Abatible Serie mTS1000</span>
                 </div>
                 <div class="project-item border rounded h-100 p-4" data-dot="05">
                     <div class="position-relative mb-4">
@@ -720,6 +741,7 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+	<script src="js/js.js"></script>
 </body>
 
 </html>
